# oz_02_collabo-005-BE

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose-deploy.yml  docker-compose.yml  pyproject.toml  user.sql
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 기능-개발-이슈-템플릿.md
app/common/: constants.py  errors.py
app/config/: settings.py  urls.py  wsgi.py
app/okvadmin/: apps.py  permissions.py  urls.py
app/order/: models.py  serializers.py  services.py  urls.py  views.py
app/restaurant/: models.py  serializers.py  tests.py  urls.py  views.py
app/user/: serializers.py  tests.py  urls.py  utils.py  views.py
app/uwsgi/: uwsgi.ini
common/: models.py
common/utils/: jwt_controller.py  response_formatter.py
config/: settings.py  urls.py
okvadmin/: urls.py
okvadmin/serializers/: auth_serializers.py
okvadmin/services/: auth_services.py
okvadmin/views/: auth_views.py
order/: models.py  serializers.py  tests.py  urls.py  views.py
order/migrations/: 0001_initial.py  0002_initial.py  0002_rename_estunated_time_delivery_estimated_time_and_more.py  0003_remove_delivery_deleted_at_and_more.py
proxy/: Dockerfile  okivery.conf
restaurant/: models.py  tests.py  urls.py  views.py
restaurant/migrations/: 0001_initial.py  0002_menu_represent_restaurant_logo.py  0003_option_group_option_name.py  0004_remove_category_deleted_at_remove_hashtag_deleted_at_and_more.py
scripts/: run.sh
user/: models.py  serializers.py  tests.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_user_birthday.py  (+5 more)
(+36 files in other folders)
